fix alignment issues and test API call

--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ background-color: var(--color-header-bg);
 }
 
 .main-content {
-    padding: 0 32px 0 8px;
+    padding: 0 8px 0 8px;
 }
 
 .repo-search {
@@ -416,7 +416,6 @@ background-color: var(--color-header-bg);
 }
 
 .btn-primary {
-    box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04), inset 0 1px 0 hsla(0,0%,100%,0.25);
     transition: .2s cubic-bezier(.3,0,.5,1);
     transition-property: color, background-color, border-color;
     display: inline-block;
@@ -427,9 +426,8 @@ background-color: var(--color-header-bg);
     white-space: nowrap;
     vertical-align: middle;
     cursor: pointer;
-    border: 1px solid #e1e4e8;
     border-radius: 6px;
-    color: hsla(0,0%,100%,0.8);
+    color: white;
     background-color: #2ea44f;
     text-decoration: none;
     text-align: center;
